[gd_scene load_steps=13 format=3 uid="uid://cnnvlsf7bei32"]

[ext_resource type="Script" path="res://cenas players/enemy.gd" id="1_8t4lc"]
[ext_resource type="Texture2D" uid="uid://crss4slri642j" path="res://caracters/Demo Soldier&Orc/Tiny RPG Character Asset Pack -Demo Soldier&Orc/Orc/Orc.png" id="2_abvg2"]

[sub_resource type="Animation" id="Animation_31fsa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ytjfu"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_hb8tj"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0139541, 0.134889, 0.260476, 0.379086, 0.523278),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_or07t"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 32, 33, 34, 35, 36]
}

[sub_resource type="Animation" id="Animation_k12bj"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4, 0, 5]
}

[sub_resource type="Animation" id="Animation_pc86n"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_61pij"]
resource_name = "strong_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667, 0.8, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 24, 25, 26, 27, 28, 29, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fayns"]
_data = {
"RESET": SubResource("Animation_31fsa"),
"attack": SubResource("Animation_ytjfu"),
"die": SubResource("Animation_hb8tj"),
"hit": SubResource("Animation_or07t"),
"idle": SubResource("Animation_k12bj"),
"strong_attack": SubResource("Animation_61pij"),
"walk": SubResource("Animation_pc86n")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jq7w6"]
radius = 2.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0pa7n"]
radius = 54.5
height = 114.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_8t4lc")

[node name="Orc" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(45, -8)
scale = Vector2(2, 2)
texture = ExtResource("2_abvg2")
hframes = 8
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fayns")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(44, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jq7w6")

[node name="EnemyHealth" type="ProgressBar" parent="."]
texture_filter = 1
offset_left = 50.0
offset_top = -30.0
offset_right = 54.0
offset_bottom = -3.0
rotation = 1.5708
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(2, 2)
size_flags_vertical = 1
fill_mode = 3
show_percentage = false

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(44, 5)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-9.50001, -3.49997)
shape = SubResource("CapsuleShape2D_0pa7n")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
